--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "jan@lagomorph.de",
   "license": "BSD",
   "dependencies": {
-    "qs": "~0.5.3"
+    "qs": "~0.5.3",
+    "cheerio": "~0.10.8",
+    "superagent": "~0.13.0"
   }
 }
